CREATE TYPE "ai_task_type" AS ENUM (
  'EXTRACT',
  'MATCH',
  'DRAFT',
  'INTAKE',
  'CRAWL'
);

CREATE TYPE "ai_task_status" AS ENUM (
  'PENDING',
  'RUNNING',
  'COMPLETED',
  'FAILED'
);

CREATE TABLE "ai_tasks" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "task_type" ai_task_type NOT NULL,
  "status" ai_task_status NOT NULL DEFAULT 'PENDING',
  "external_user_id" bigint,
  "external_company_id" bigint,
  "external_job_posting_id" bigint,
  "external_question_id" bigint,
  "idempotency_key" varchar(128) NOT NULL,
  "input_hash" varchar(64) NOT NULL,
  "model" varchar(50),
  "prompt_version" varchar(20),
  "algorithm_version" varchar(20),
  "request_payload" jsonb,
  "result_payload" jsonb,
  "retry_count" integer NOT NULL DEFAULT 0,
  "total_tokens" integer,
  "latency_ms" integer,
  "error_message" text,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "started_at" timestamptz,
  "completed_at" timestamptz
);

CREATE TABLE "ai_task_attempts" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "ai_task_id" bigint NOT NULL,
  "attempt_no" integer NOT NULL,
  "status" ai_task_status NOT NULL,
  "error_message" text,
  "started_at" timestamptz NOT NULL,
  "finished_at" timestamptz
);

CREATE TABLE "ai_usage" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "ai_task_id" bigint NOT NULL,
  "model" varchar(50) NOT NULL,
  "prompt_tokens" integer NOT NULL DEFAULT 0,
  "completion_tokens" integer NOT NULL DEFAULT 0,
  "cost_usd" decimal(10,4),
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE UNIQUE INDEX ON "ai_tasks" ("idempotency_key");

CREATE INDEX ON "ai_tasks" ("task_type", "external_job_posting_id", "status");

CREATE INDEX ON "ai_tasks" ("status", "task_type");

CREATE UNIQUE INDEX ON "ai_task_attempts" ("ai_task_id", "attempt_no");

CREATE INDEX ON "ai_usage" ("ai_task_id");

COMMENT ON TABLE "ai_tasks" IS 'MATCH 작업 단위 = (external_user_id, external_job_posting_id, input_hash) → 공고 1건당 task 1개.
재계산 상태 조회 시 반드시 external_job_posting_id 조건을 포함해야 한다.
예) WHERE task_type=''MATCH'' AND external_user_id=:uid AND external_job_posting_id=:pid AND status IN (''PENDING'',''RUNNING'')
작업 유형별 필수 external_* 컬럼 정합성은 ai_service_constraints.sql의 CHECK로 보강.';

COMMENT ON COLUMN "ai_tasks"."external_user_id" IS 'MATCH/DRAFT/INTAKE 필수';

COMMENT ON COLUMN "ai_tasks"."external_company_id" IS 'CRAWL 필수';

COMMENT ON COLUMN "ai_tasks"."external_job_posting_id" IS 'MATCH/EXTRACT 필수';

COMMENT ON COLUMN "ai_tasks"."external_question_id" IS 'DRAFT 필수';

COMMENT ON COLUMN "ai_tasks"."idempotency_key" IS 'task_type + external_ids + input_hash + model + prompt_version 조합 해시';

COMMENT ON COLUMN "ai_tasks"."retry_count" IS 'CHECK >= 0';

COMMENT ON TABLE "ai_task_attempts" IS 'ai_tasks 행은 최신 상태만 유지. 시도별 상세(실패 사유·소요시간)는 여기 누적';

COMMENT ON COLUMN "ai_task_attempts"."attempt_no" IS 'CHECK > 0';

ALTER TABLE "ai_task_attempts" ADD FOREIGN KEY ("ai_task_id") REFERENCES "ai_tasks" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "ai_usage" ADD FOREIGN KEY ("ai_task_id") REFERENCES "ai_tasks" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;
